// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards component add cards click snaphot 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component add cards click snaphot 2`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component cards snapshot 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component delete cards snapshot 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component delete cards snapshot 2`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component update cards snapshot 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={true}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;

exports[`Cards component update cards snapshot 2`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <input
        disabled={false}
        id="432e39hzdo08aqcdgd"
        name="cardsName"
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="eat dinner"
      />
      <input
        name="deleteCards"
        onClick={[Function]}
        type="button"
        value="Delete Card"
      />
      <input
        name="editCards"
        onClick={[Function]}
        type="button"
        value="Edit Card"
      />
    </li>
  </ul>
  <input
    name="addCards"
    onClick={[Function]}
    type="button"
    value="Add Cards"
  />
</div>
`;
